# torchcross

./: README.md  pyproject.toml  requirements.txt
tests/cd/metrics/: classification.py
tests/data/: test_task_source.py
tests/data/meta_dataset/: test_base.py
torchcross/: __init__.py
torchcross/cd/: activations.py  losses.py
torchcross/cd/heads/: __init__.py  classification.py
torchcross/cd/metrics/: __init__.py  classification.py  wrappers.py
torchcross/data/: __init__.py  base.py  dataset.py  task.py  task_source.py
torchcross/data/meta/: __init__.py  base.py  few_shot.py  few_shot_dummies.py
torchcross/data/metadataset/: __init__.py  base.py  collection.py  few_shot.py  few_shot_dummies.py
torchcross/models/: __init__.py  cross_domain.py  episodic.py  maml.py  protonet.py  simple.py
torchcross/models/lightning/: __init__.py  classifier.py  cross_domain.py  cross_domain_classifier.py  diverse_maml.py  diverse_transfer.py  episodic.py  episodic_model.py  few_shot_adapter.py  maml.py  mixins.py  protonet.py  simple.py
torchcross/utils/: __init__.py  collate_fn.py  layers.py  loops.py
