[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchcross"
version = "0.0.3"
authors = [
    { name="Stefano Woerner", email="stefano@woerner.eu" },
]
description = "Easy-to-use PyTorch library for cross-domain learning, few-shot learning and meta-learning"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy~=1.24.3",
    "torch~=2.0.0",
    "lightning~=2.0.2",
    "torchmetrics~=0.11.4",
    "omegaconf~=2.3.0",
    "torchopt~=0.7.1",
]

[project.urls]
"Homepage" = "https://github.com/StefanoWoerner/torchcross"
"Issue Tracker" = "https://github.com/StefanoWoerner/torchcross/issues"
